--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,7 @@ custom-placeholders: # Burada oluşturduğunuz placeholderleri her yerde kullana
 
 no-permission: '%prefix% &cÜzgünüm %player% ancak bunu yapamazsın.'
 main-command-perm-required: true # Eğer true ise '/sst' komutunu kullanmak için 'sst.maincmd' yetkisine sahip olmalısınız.
+auto-save-interval: 30 # dakika biçiminde
 
 join-quit-messages:
   enabled: true
