--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -263,3 +263,7 @@ other-messages:
     modes:
       WALK: Yürüme
       FLY: Uçma
+  skull:
+    added: '%prefix% &b%headOwner% &3adlı oyuncunun kafası envanterinize eklendi.'
+    added-other: '%prefix% &b%headOwner% &3adlı oyuncunun kafası &b%other% &3adlı oyuncunun envanterine eklendi.'
+    not-found: '%prefix% &cÜzgünüm ancak o oyuncuyu bulamadım.'
