Fix InvSeeCommand and SkullCommand

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -267,3 +267,6 @@ other-messages:
     added: '%prefix% &b%headOwner% &3adlı oyuncunun kafası envanterinize eklendi.'
     added-other: '%prefix% &b%headOwner% &3adlı oyuncunun kafası &b%other% &3adlı oyuncunun envanterine eklendi.'
     not-found: '%prefix% &cÜzgünüm ancak o oyuncuyu bulamadım.'
+    wrong-usage: |
+      %prefix% &cKomutu hatalı kullandınız. Doğru kullanım: &b/skull <kafa ismi> [<verilecek oyuncu>]
+      %prefix% &cKafa ismi Türkçe karakter içeremez.
