--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <repositories>
         <repository>
             <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
+            <url>https://jitpack.io/</url>
         </repository>
         <repository>
             <id>papermc-repo</id>
