--- a/src/main/resources/announcements.yml
+++ b/src/main/resources/announcements.yml
@@ -9,7 +9,7 @@ announcements:
         permission: 'sst.vip' # boş olursa kimseye gitmez
                               # OP olan oyuncular da bu duyuruyu alacaktır.
                               # bu durumu engellemek için PERMISSION yerine GROUP tipini kullanıp
-                              # VIP grubu (veya sizin grup adınız ne olarak kayıtlıysa) kullanabilirsiniz.
+                              # VIP grubunu (veya sizin grup adınız ne olarak kayıtlıysa) kullanabilirsiniz.
       content: 'Bu viplere özel bir duyuru %player%!'
     announcement-1:
       filter:
