Added an option to disable death messages

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -79,6 +79,8 @@ tpa:
     # STAFF: sadece yetkilileri kapsar
     # EXCEPT_STAFF: yetkililer dışındaki herkesi kapsar
 
+disable-death-messages: false
+
 other-messages:
   help-message:
     beginning: |
